# XBusLite

./: .gitignore  CMakeLists.txt  README.md  XBusLite.cmake  xbus.bat  xbus.sh  xbus.xbus
inc/: XBus.Json.hxx  XBus.hxx
src/: Detail.cxx  Detail.hxx  Python.cxx  XBus.cxx  XBus.hxx
src/Detail/: XBus.cxx
test/: B1.cxx  B2.cxx  B3.cxx  B4.cxx  S1.cxx  create_client.cxx  embed_ffi.cxx  embed_module.cxx  knock_knock.cxx  task_execution.cxx  task_execution.xbus.cxx
test/client/: B1.client.cxx  B4.client.cxx
test/client/python/: B4.client.py
test/embed_module/: embed_module.cxx  embed_module.py
test/knock_knock/: knock_knock.cxx
test/python/: B2.py
test/task_execution/: task_execution.cxx  task_execution.py
